- Patch AcrossOrderedWebSecurityConfigurerSet to support Java 17 - Update module config-schema.json - Added support for storing system configurations - Added support for Zalando Problem and exception translation - Remove Individual name object